# SkillRadar

./: .gitignore  HANDOFF.md  README.md  m0_spike.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pipeline.yml
.streamlit/: config.toml
dashboard/: app.py
data/: skills.seed.json  sources.json
python/: .gitignore  HANDOFF.md  pyproject.toml
python/.github/workflows/: ci.yml
python/data/: skills.seed.json  sources.json
python/src/skillradar/: __init__.py
python/tests/: test_connectors.py  test_pipeline.py
reference/: README.md
reference/dotnet-original/: SkillRadar.slnx
reference/dotnet-original/web/: index.html  vite.config.ts
src/SkillRadar.Api/: SkillRadar.Api.http
src/SkillRadar.Api/Endpoints/: ApiEndpoints.cs
src/SkillRadar.Core/Entities/: Job.cs  JobSkill.cs  JobSourceType.cs  Skill.cs  SkillAlias.cs  SkillDemand.cs
src/SkillRadar.Core/Ingestion/: BoardConfig.cs  IJobSource.cs
src/SkillRadar.Core/Skills/: SkillGuard.cs  SkillMatcher.cs
src/SkillRadar.Core/Text/: DedupHasher.cs  TextNormalizer.cs
src/SkillRadar.Data/: DesignTimeDbContextFactory.cs  SkillRadar.Data.csproj
src/SkillRadar.Data/Migrations/: 20260615111156_InitialCreate.Designer.cs  SkillRadarDbContextModelSnapshot.cs
src/SkillRadar.Data/Seeding/: DbSeeder.cs  SkillSeed.cs
src/SkillRadar.Ingestion/: DependencyInjection.cs  IngestionOptions.cs  IngestionPipeline.cs
src/SkillRadar.Ingestion/Json/: JsonHelpers.cs
src/SkillRadar.Ingestion/Sources/: AshbyJobSource.cs  GreenhouseJobSource.cs  LeverJobSource.cs
src/skillradar/application/: __init__.py  dto.py  errors.py  pipeline.py  ports.py
src/skillradar/bronze/: land.py
src/skillradar/common/: models.py
src/skillradar/domain/: __init__.py  dedup.py  demand.py  extraction.py  models.py  reconciliation.py  records.py  skillgap.py
src/skillradar/gold/: aggregate.py
src/skillradar/infrastructure/: __init__.py  config.py  logging.py
src/skillradar/ingestion/: ashby.py  catalog.py  greenhouse.py  (+1 more)
tests/: test_architecture.py  test_connectors.py  test_data_target.py  test_dbt_parity.py  test_dedup.py  test_market_chat_tools.py  test_matcher.py  test_pipeline.py  test_roadmap_fallback.py  test_services_with_fakes.py  test_serving_export.py  test_skillgap.py
transform/: README.md  dbt_project.yml  profiles.yml
transform/macros/: generate_schema_name.sql
transform/seeds/: _seeds.yml  seed_roles.csv
web/: package-lock.json
web/src/: index.css
(+88 files in other folders)
