[project]
name = "skillradar"
version = "0.1.0"
description = "Job-market intelligence pipeline (Python DE rebuild of SkillRadar)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.6",
    "pandas>=2.2",
    "duckdb>=1.0",
    "pyarrow>=15",
    "pytz>=2024.1",  # DuckDB uses it to materialize TIMESTAMPTZ values to Python
    "streamlit>=1.33",
    "altair>=5",
]

[project.optional-dependencies]
orchestration = ["prefect>=2.16"]
ai = ["anthropic>=0.40"]  # optional LLM learning-roadmap enrichment
# Analytics-engineering layer: dbt owns the Silver→Gold transform (the star schema + marts).
# Invoked as a subprocess, so it may live in its own env — dbt-core has no Python 3.14 wheels yet.
dbt = ["dbt-duckdb>=1.9"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
skillradar = "skillradar.interface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillradar"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "dbt: end-to-end test that shells out to dbt (skipped when dbt is not on PATH)",
]
